--- a/app_client/locationDetail/locationDetail.view.html
+++ b/app_client/locationDetail/locationDetail.view.html
@@ -39,7 +39,7 @@
               <h2 class="panel-title">Location map</h2>
             </div>
             <div class="panel-body">
-              <img src="https://maps.googleapis.com/maps/api/staticmap?center={{ vm.data.location.location.coordinates[1] }},{{ vm.data.location.location.coordinates[0] }}&amp;zoom=17&amp;size=400x350&amp;sensor=false&amp;markers={{ vm.data.location.location.coordinates[1] }},{{ vm.data.location.location.coordinates[0] }}&amp;scale=2" class="img-responsive img-rounded">
+              <img src="https://maps.googleapis.com/maps/api/staticmap?center={{ vm.data.location.location.coordinates[1] }},{{ vm.data.location.location.coordinates[0] }}&amp;zoom=17&amp;size=400x350&amp;sensor=false&amp;markers={{ vm.data.location.location.coordinates[1] }},{{ vm.data.location.location.coordinates[0] }}&amp;scale=2&amp;key=AIzaSyAOTzxH6LtZsIqEWwL9EqY6j1LM3kkO_rQ" class="img-responsive img-rounded">
             </div>
           </div>
         </div>
