--- a/app_client/locationDetail/locationDetail.view.html
+++ b/app_client/locationDetail/locationDetail.view.html
@@ -38,8 +38,8 @@
             <div class="panel-heading">
               <h2 class="panel-title">Location map</h2>
             </div>
-            <div class="panel-body">
-              <img src="https://maps.googleapis.com/maps/api/staticmap/json?center={{ vm.data.location.location.coordinates[1] }},{{ vm.data.location.location.coordinates[0] }}&amp;zoom=17&amp;size=400x350&amp;scale=2&amp;key=AIzaSyAOTzxH6LtZsIqEWwL9EqY6j1LM3kkO_rQ" class="img-responsive img-rounded">
+            <div class="panel-body" ng-cloak>
+              <img src="https://maps.googleapis.com/maps/api/staticmap?size=400x350&format=jpg&markers={{ vm.data.location.location.coordinates[1] }},{{ vm.data.location.location.coordinates[0] }}&zoom=15&key=AIzaSyAOTzxH6LtZsIqEWwL9EqY6j1LM3kkO_rQ" class="img-responsive img-rounded">
             </div>
           </div>
         </div>
