--- a/app_client/index.html
+++ b/app_client/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body ng-view>
-    <script src="/angular/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.32/angular.js"></script>    
     <script src="/lib/angular-route.min.js"></script>
     <script src="/lib/angular-sanitize.min.js"></script>
     <script src="/lib/ui-bootstrap-custom-0.12.0.min.js"></script>
     <script src="/lib/ui-bootstrap-custom-tpls-0.12.0.min.js"></script>
-    <script src="/angular/loc8r.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/javascripts/loc8r.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js" 
+      integrity="sha384-s1ITto93iSMDxlp/79qhWHi+LsIi9Gx6yL+cOKDuymvihkfol83TYbLbOw+W/wv4" 
+      crossorigin="anonymous"></script>
     <script src="/javascripts/validation.js"></script>
   </body>
 </html>
