--- a/app_client/common/directives/footerGeneric/footerGeneric.template.html
+++ b/app_client/common/directives/footerGeneric/footerGeneric.template.html
@@ -1,5 +1,5 @@
 <footer>
   <div class="row">
-    <div class="col-xs-12"><small>&copy; Simon Holmes 2014</small></div>
+    <div class="col-xs-12"><small>&copy; Paulo Henrique 2020</small></div>
   </div>
 </footer>
