--- a/app_client/index.html
+++ b/app_client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="/bootstrap/css/amelia.bootstrap.css">
+    <link rel="stylesheet" href="/bootstrap/css/loc8r.bootstrap.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body ng-view>
@@ -13,10 +13,15 @@
     <script src="/lib/ui-bootstrap-custom-0.12.0.min.js"></script>
     <script src="/lib/ui-bootstrap-custom-tpls-0.12.0.min.js"></script>
     <script src="/javascripts/loc8r.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js" 
-      integrity="sha384-s1ITto93iSMDxlp/79qhWHi+LsIi9Gx6yL+cOKDuymvihkfol83TYbLbOw+W/wv4" 
-      crossorigin="anonymous"></script>
     <script src="/javascripts/validation.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" 
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" 
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" 
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" 
+      crossorigin="anonymous"></script>
   </body>
 </html>
